# gen/http/query_svc/server/types.go
@@ -385,7 +385,7 @@ func NewReadyzNotReadyResponseBody(res *goa.ServiceError) *ReadyzNotReadyRespons
 
 // NewQueryResourcesPayload builds a query-svc service query-resources endpoint
 // payload.
-func NewQueryResourcesPayload(version string, name *string, parent *string, type_ *string, tags []string, tagsAll []string, sort string, pageToken *string, bearerToken string) *querysvc.QueryResourcesPayload {
+func NewQueryResourcesPayload(version string, name *string, parent *string, type_ *string, tags []string, tagsAll []string, dateField *string, dateFrom *string, dateTo *string, sort string, pageToken *string, bearerToken string) *querysvc.QueryResourcesPayload {
 	v := &querysvc.QueryResourcesPayload{}
 	v.Version = version
 	v.Name = name
@@ -393,6 +393,9 @@ func NewQueryResourcesPayload(version string, name *string, parent *string, type
 	v.Type = type_
 	v.Tags = tags
 	v.TagsAll = tagsAll
+	v.DateField = dateField
+	v.DateFrom = dateFrom
+	v.DateTo = dateTo
 	v.Sort = sort
 	v.PageToken = pageToken
 	v.BearerToken = bearerToken
@@ -402,7 +405,7 @@ func NewQueryResourcesPayload(version string, name *string, parent *string, type
 
 // NewQueryResourcesCountPayload builds a query-svc service
 // query-resources-count endpoint payload.
-func NewQueryResourcesCountPayload(version string, name *string, parent *string, type_ *string, tags []string, tagsAll []string, bearerToken string) *querysvc.QueryResourcesCountPayload {
+func NewQueryResourcesCountPayload(version string, name *string, parent *string, type_ *string, tags []string, tagsAll []string, dateField *string, dateFrom *string, dateTo *string, bearerToken string) *querysvc.QueryResourcesCountPayload {
 	v := &querysvc.QueryResourcesCountPayload{}
 	v.Version = version
 	v.Name = name
@@ -410,6 +413,9 @@ func NewQueryResourcesCountPayload(version string, name *string, parent *string,
 	v.Type = type_
 	v.Tags = tags
 	v.TagsAll = tagsAll
+	v.DateField = dateField
+	v.DateFrom = dateFrom
+	v.DateTo = dateTo
 	v.BearerToken = bearerToken
 
 	return v
